Updated multiprocessing import and error check in various notebooks

--- a/Tutorial-ETK_thorn-WaveToyNRPy.ipynb
+++ b/Tutorial-ETK_thorn-WaveToyNRPy.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ScalarWave_ETK_py_dir/WaveToyETK_C_kernels_codegen.py\n"
+      "Overwriting ScalarWave_ETK_py_dir/WaveToyETK_C_kernels_codegen.py\n"
      ]
     }
    ],
@@ -406,42 +406,26 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:Ignore this warning/backtrace if on a system in which serial codegen is necessary:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/var/folders/8x/qypjrmd12n7_2mm0s7f2vf8r0000gn/T/ipykernel_4417/1433110239.py\", line 65, in <cell line: 34>\n",
-      "    pool = multiprocessing.Pool() #processes=len(paramslist))\n",
-      "NameError: name 'multiprocessing' is not defined\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "***************************************\n",
-      "Starting serial C kernel codegen...\n",
-      "(If you were running in parallel before,\n",
-      " this means parallel codegen failed)\n",
-      "***************************************\n",
       "Generating symbolic expressions for WaveToy RHSs...\n",
-      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.025938987731933594 seconds.\n",
-      "Generating C code for WaveToy RHSs (FD_order=2) in Cartesian coordinates.\n",
-      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=2) in 0.08721494674682617 seconds.\n",
+      "Generating symbolic expressions for WaveToy RHSs...Generating symbolic expressions for WaveToy RHSs...\n",
+      "\n",
       "Generating symbolic expressions for WaveToy RHSs...\n",
-      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.02013111114501953 seconds.\n",
-      "Generating C code for WaveToy RHSs (FD_order=4) in Cartesian coordinates.\n",
-      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=4) in 0.11103487014770508 seconds.\n",
-      "Generating symbolic expressions for WaveToy RHSs...\n",
-      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.013731002807617188 seconds.\n",
-      "Generating C code for WaveToy RHSs (FD_order=6) in Cartesian coordinates.\n",
-      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=6) in 0.1474618911743164 seconds.\n",
-      "Generating symbolic expressions for WaveToy RHSs...\n",
-      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.016054868698120117 seconds.\n",
-      "Generating C code for WaveToy RHSs (FD_order=8) in Cartesian coordinates.\n",
-      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=8) in 0.19527101516723633 seconds.\n",
-      "(BENCH) Finished C kernel codegen for WaveToy in 0.7907660007476807 seconds.\n"
+      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.03818702697753906 seconds.\n",
+      "(BENCH) Finished WaveToy RHS symbolic expressions in 0.04004979133605957 seconds.(BENCH) Finished WaveToy RHS symbolic expressions in 0.04361605644226074 seconds.(BENCH) Finished WaveToy RHS symbolic expressions in 0.04396963119506836 seconds.Generating C code for WaveToy RHSs (FD_order=6) in Cartesian coordinates.\n",
+      "\n",
+      "\n",
+      "\n",
+      "Generating C code for WaveToy RHSs (FD_order=4) in Cartesian coordinates.Generating C code for WaveToy RHSs (FD_order=2) in Cartesian coordinates.Generating C code for WaveToy RHSs (FD_order=8) in Cartesian coordinates.\n",
+      "\n",
+      "\n",
+      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=2) in 0.1929771900177002 seconds.\n",
+      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=4) in 0.28936314582824707 seconds.\n",
+      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=6) in 0.39238786697387695 seconds.\n",
+      "(BENCH) Finished WaveToy_RHS C codegen (FD_order=8) in 0.5159783363342285 seconds.\n",
+      "(BENCH) Finished C kernel codegen for WaveToy in 0.8135979175567627 seconds.\n"
      ]
     }
    ],
@@ -510,7 +494,7 @@
     "\n",
     "        # Step 3.d.iv: Evaluate list of functions in parallel if possible;\n",
     "        #           otherwise fallback to serial evaluation:\n",
-    "        pool = multiprocessing.Pool() #processes=len(paramslist))\n",
+    "        pool = mp.Pool() #processes=len(paramslist))\n",
     "        NRPyEnvVars.append(pool.map(master_func,range(len(paramslist))))\n",
     "        pool.terminate()\n",
     "        pool.join()\n",
