--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
@@ -938,9 +938,6 @@
     }
    ],
    "source": [
-    "# Step 0: Import the multiprocessing module.\n",
-    "import multiprocessing\n",
-    "\n",
     "# Step 1: Create a list of functions we wish to evaluate in parallel\n",
     "funcs = [Psi4re,Psi4re,Psi4re,Psi4im,Psi4im,Psi4im, BrillLindquistID,BSSN_RHSs,Ricci,Hamiltonian,gammadet]\n",
     "\n",
@@ -955,16 +952,30 @@
     "        funcs[idx]()\n",
     "\n",
     "try:\n",
-    "    if os.name == 'nt':\n",
+    "    import platform\n",
+    "    os_name = platform.system() # Linux, Darwin, or Windows\n",
+    "    # Step 2.d: Import the multiprocessing module.\n",
+    "    if os_name == 'Windows':\n",
     "        # It's a mess to get working in Windows, so we don't bother. :/\n",
     "        #  https://medium.com/@grvsinghal/speed-up-your-python-code-using-multiprocessing-on-windows-and-jupyter-or-ipython-2714b49d6fac\n",
-    "        raise Exception(\"Parallel codegen currently not available in Windows\")\n",
-    "    # Step 1.b: Import the multiprocessing module.\n",
-    "    import multiprocessing\n",
+    "        raise Exception(\"Parallel codegen currently not available in certain environments, e.g., Windows\")\n",
+    "    elif os_name == \"Darwin\":\n",
+    "        # On Mac OS multiprocessing does not work as expected in Jupyter\n",
+    "        # notebooks, so we use multiprocess instead\n",
+    "        try:\n",
+    "            import multiprocess as mp\n",
+    "        except:\n",
+    "            error = \"Could not load multiprocess. Please install it (e.g., `$ pip install multiprocess`) and try running this notebook again.\"\n",
+    "            raise ImportError(error)\n",
+    "    elif os_name == \"Linux\":\n",
+    "        # On Linux using multiprocessing does not seem to be a problem\n",
+    "        import multiprocessing as mp\n",
+    "    else:\n",
+    "        raise Exception(f\"Unknown system {os_name}. Reverting to serial code generation.\")\n",
     "\n",
     "    # Step 1.c: Evaluate list of functions in parallel if possible;\n",
     "    #           otherwise fallback to serial evaluation:\n",
-    "    pool = multiprocessing.Pool()\n",
+    "    pool = mp.Pool()\n",
     "    pool.map(master_func,range(len(funcs)))\n",
     "except:\n",
     "    # Steps 1.b-1.c, alternate: As fallback, evaluate functions in serial.\n",
@@ -1666,7 +1677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0rc2"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
